--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,31 @@
 @import "tailwindcss";
 
+html {
+  font-size: 18px;
+}
+
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: #101311;
+  --foreground: #9FA1A0;
+  --primary: #B5EBB9;
+  --highlight: #ffffff;
 }
 
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
+  --color-primary: var(--primary);
+  --color-highlight: var(--highlight);
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+  --font-sans: var(--font-jost);
+  --font-heading: var(--font-press-start);
+  --font-mono: var(--font-geist-mono);
 }
 
 body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+  
+  @apply font-sans;
 }
