--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,6 +22,10 @@ html {
   --font-mono: var(--font-geist-mono);
 }
 
+@theme {
+  --breakpoint-xs: 30rem;
+}
+
 body {
   background: var(--background);
   color: var(--foreground);
