--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,6 +26,12 @@ html {
   --breakpoint-xs: 30rem;
 }
 
+@layer utilities {
+  .flex-center {
+    @apply flex justify-center items-center;
+  }
+}
+
 body {
   background: var(--background);
   color: var(--foreground);
