--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,6 +11,78 @@ html {
   --highlight: #ffffff;
 }
 
+body {
+  background: var(--background);
+  color: var(--foreground);
+  font-family: Arial, Helvetica, sans-serif;
+  
+  @apply font-sans;
+}
+
+.post {
+  & header {
+    @apply mb-12;
+  }
+  & header h1 {
+    @apply text-2xl text-highlight font-bold mb-2;
+  }
+  & header time {
+    @apply text-sm;
+  }
+  & header img {
+    @apply rounded-2xl object-cover mb-4;
+  }
+
+  & a {
+    @apply text-primary;
+  }
+  & img {
+    @apply w-full;
+  }
+  & strong {
+    @apply font-bold text-[#b2b3b3];
+  }
+  & p {
+    @apply leading-6 mb-4;
+  }
+  & h2 {
+    @apply text-xl text-highlight font-bold mb-2;
+  }
+  & h3 {
+    @apply text-lg font-bold mb-2;
+  }
+  & blockquote {
+    @apply block border-l-8 border-[#242E28] p-4 mb-4 text-white italic;
+  }
+  & blockquote p {
+    @apply mb-0;
+  }
+  & ul, ol {
+    @apply mb-4 ml-8;
+  }
+  & ul {
+    @apply list-disc;
+  }
+  & ol {
+    @apply list-decimal;
+  }
+  & li {
+    @apply mb-1;
+  }
+  & li p {
+    @apply mb-0;
+  }
+  & code {
+    @apply font-mono text-[0.7rem] text-highlight px-2 py-1 bg-[#242E28] rounded-sm;
+  }
+  & pre {
+    @apply overflow-x-auto p-2 mb-4 bg-[#171c19];
+  }
+  & pre code {
+    @apply font-mono text-[0.7rem] bg-transparent p-0;
+  }
+}
+
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
@@ -26,16 +98,29 @@ html {
   --breakpoint-xs: 30rem;
 }
 
+@layer base {
+  ::-webkit-scrollbar-track,
+  ::-webkit-scrollbar-track {
+      width: 4px;
+      height: 4px;
+      background-color: transparent;
+  }
+  ::-webkit-scrollbar,
+  ::-webkit-scrollbar {
+      width: 4px;
+      height: 4px;
+  }
+  ::-webkit-scrollbar-thumb,
+  ::-webkit-scrollbar-thumb {
+      width: 4px;
+      height: 4px;
+      background-color: var(--primary);
+      cursor: pointer;
+  }
+}
+
 @layer utilities {
   .flex-center {
     @apply flex justify-center items-center;
   }
-}
-
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
-  
-  @apply font-sans;
 }
